--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,19 @@
 click
 Sphinx
 coverage
-awscli
 flake8
 python-dotenv>=0.5.1
 
-
-# backwards compatibility
-pathlib2
+# Libraries needed to run the code
+ipython==8.16.1
+matplotlib==3.8.0
+numpy==1.26.1
+pandas==2.1.1
+plotly==5.17.0
+scikit_learn==1.3.1
+scikit_learn_extra==0.3.0
+spotipy==2.23.0
+yellowbrick==1.5
+nbformat>=4.2.0
+mlflow==2.7.1
+dagshub==0.3.8.post2
