--- a/.gitignore
+++ b/.gitignore
@@ -76,8 +76,7 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/*
-!data/*.md
+!data/README.md
 
 # Mac OS-specific storage files
 .DS_Store
