--- a/.dvc/config
+++ b/.dvc/config
@@ -1,3 +1,8 @@
+[core]
+    remote = myremote
 ['remote "origin"']
     url = s3://dvc
     endpointurl = https://dagshub.com/se4ai2324-uniba/MusicExpress.s3
+['remote "myremote"']
+    url = gdrive://1rLgsJ0XuvcUwEp5_Ai0NTFNoNCFGUXcK
+    gdrive_acknowledge_abuse = true
