Fix pylint issues+new pylint reports
Fixed issues:
- invalid-name(module)
-missing-function-docstring
-missing-module-docstring
- wrong-import-order
- trailing-whitespace

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,8 +1,8 @@
 stages:
   extract:
-    cmd: python src/data/extractData.py
+    cmd: python src/data/extract_data.py
     deps:
-      - src/data/extractData.py
+      - src/data/extract_data.py
       - data/raw/dataset.zip
     outs:
       - data/interim:
