--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ dvc_gdrive==2.20.0
 joblib==1.3.2
 
 # Libraries needed for Quality-Assessment
+pytest==7.4.3
 pylint==3.0.2
 pynblint==0.1.5
 flake8==6.1.0
