--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ yellowbrick==1.5
 nbformat>=4.2.0
 
 # Libraries needed for Data Versioning, Model and Experiment Tracking
+rich==11.2.0
 mlflow==2.7.1
 dagshub==0.3.8.post2
 dvc==3.27.0
