--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -21,24 +21,6 @@ jobs:
         run: |
           pylint --fail-under=8 src/
 
-  pynblint_qa:
-    name: Pynblint code quality assurance
-    runs-on: windows-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Set up Python >=3.11.5 <=3.11.6
-        uses: actions/setup-python@v4
-        with:
-          python-version: ">=3.11.5 <=3.11.6"
-      - name: Install Poetry
-        uses: abatilo/actions-poetry@v2.0.0
-      - name: Install project dependencies
-        run: poetry install --no-dev
-      - name: Run Pynblint on the cwd
-        run: |
-          poetry run pynblint ./notebooks/ ./src/tests/test_deepchecks.ipynb
-
   flake8_qa:
     name: Flake8 code quality assurance
     runs-on: windows-latest
@@ -53,6 +35,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt
-      - name: Analyze code with flake8
-        run: |
-          flake8 src\ --format=html --htmldir=reports\flake8\
+      - name: flake8 Lint
+        uses: py-actions/flake8@v2
+        with:
+          path: "./src"
+          ignore: "F401"
+          exclude: "src/tests/test_deepchecks.py"
+          max-line-length: "120"
