Update Flake8 job in QA github action

--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -39,6 +39,6 @@ jobs:
         uses: py-actions/flake8@v2
         with:
           path: "./src"
-          ignore: "F401"
+          ignore: "E226, E121, E123, E126, W504"
           exclude: "src/tests/test_deepchecks.py"
           max-line-length: "120"
