--- a/.github/workflows/Model_testing.yml
+++ b/.github/workflows/Model_testing.yml
@@ -1,31 +1,40 @@
 name: model_testing_workflow
+run-name: Testing main pipeline steps if scripts change
 
 on:
   push:
     paths:
-      - "scripts/**"
+      - "src/data/**"
+      - "src/features/**"
+      - "src/models/**"
 
 jobs:
   model-training:
     name: Model training
     runs-on: windows-latest
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
       - name: Set up Python >=3.11.5 <=3.11.6
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ">=3.11.5 <=3.11.6"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt
+
       - name: Extract data
         run: |
-          python src/data/train.py
+          python src/data/extract_data.py
+
       - name: Preprocess data
         run: |
           python src/features/preprocessing.py
+
       - name: Cluster data
         run: |
           python src/models/clustering.py
