--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -1,4 +1,5 @@
 name: quality_assurance_workflow
+run-name: Checking Pylint code quality after changes
 
 on: [push]
 
@@ -6,17 +7,21 @@ jobs:
   pylint_qa:
     name: Pylint code quality assurance
     runs-on: windows-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Set up Python >=3.11.5 <=3.11.6
         uses: actions/setup-python@v4
         with:
           python-version: ">=3.11.5 <=3.11.6"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt
+
       - name: Analyze code with pylint
         run: |
           pylint --fail-under=8 src/
