--- a/.github/workflows/test_scripts_api.yml
+++ b/.github/workflows/test_scripts_api.yml
@@ -1,49 +1,59 @@
-name: api_testing_workflow
+name: pytest_tests_workflow
+run-name: Testing pytest tests if API or pipeline scripts change
 
 on:
   push:
     paths:
-      - 'src/api/**'
-      - 'src/tests/**'
+      - "src/api/**"
+      - "src/tests/**"
+      - "src/data/**"
+      - "src/features/**"
+      - "src/models/**"
 
 jobs:
   api-testing:
     name: API testing
     runs-on: windows-latest
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
       - name: Set up Python >=3.11.5 <=3.11.6
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ">=3.11.5 <=3.11.6"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt
+
       - name: Test the API with pytest
         run: |
-          cd src/tests/pytest
-          pytest test_api.py
+          python -m pytest src\tests\pytest\test_api.py
 
   scripts-testing:
     name: Scripts testing
     runs-on: windows-latest
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
       - name: Set up Python >=3.11.5 <=3.11.6
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ">=3.11.5 <=3.11.6"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt
+
       - name: Test the Python scripts with pytest
         run: |
-          cd src/tests/pytest
-          pytest test_files_utilities.py
-          pytest test_preprocessing.py
-          pytest test_recommend.py
-          pytest test_spotipy_utilities.py
+          python -m pytest src\tests\pytest\test_file_utilities.py
+          python -m pytest src\tests\pytest\test_preprocessing.py
+          python -m pytest src\tests\pytest\test_recommend.py
+          python -m pytest src\tests\pytest\test_spotipy_utilities.py
