--- a/.dvc/config
+++ b/.dvc/config
@@ -6,3 +6,4 @@
 ['remote "myremote"']
     url = gdrive://1rLgsJ0XuvcUwEp5_Ai0NTFNoNCFGUXcK
     gdrive_acknowledge_abuse = true
+    gdrive_use_service_account = true
