--- a/.github/workflows/Model_testing.yml
+++ b/.github/workflows/Model_testing.yml
@@ -22,6 +22,15 @@ jobs:
         with:
           python-version: ">=3.11.5 <=3.11.6"
 
+      - name: Set up DVC
+        uses: iterative/setup-dvc@v1
+
+      - name: Pull data with DVC
+        env:
+          GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+        run: |
+          dvc pull
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -29,7 +38,6 @@ jobs:
 
       - name: Extract data
         run: |
-          dvc pull -r myremote
           python src/data/extract_data.py
 
       - name: Preprocess data
