--- a/.github/workflows/test_scripts_api.yml
+++ b/.github/workflows/test_scripts_api.yml
@@ -24,6 +24,15 @@ jobs:
         with:
           python-version: ">=3.11.5 <=3.11.6"
 
+      - name: Set up DVC
+        uses: iterative/setup-dvc@v1
+
+      - name: Pull data with DVC
+        env:
+          GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+        run: |
+          dvc pull
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -31,7 +40,6 @@ jobs:
 
       - name: Test the API with pytest
         run: |
-          dvc pull -r myremote
           python -m pytest src\tests\pytest\test_api.py
 
   scripts-testing:
