Docker and Github README(s) + Minor tweaks

--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -1,7 +1,10 @@
 name: quality_assurance_workflow
 run-name: Checking Pylint code quality after changes
 
-on: [push]
+on:
+  push:
+    paths:
+      - "src/**"
 
 jobs:
   pylint_qa:
