--- a/requirements.txt
+++ b/requirements.txt
@@ -41,4 +41,9 @@ uvicorn==0.24.0.post1
 
 # Libraries needed for Deployment
 docker==6.1.3
+
+# Libraries needed for GreenAI
 codecarbon==2.3.2
+dash==2.14.2
+dash_bootstrap_components==1.5.0
+fire==0.5.0
