--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -29,24 +29,19 @@ jobs:
         run: |
           pylint --fail-under=8 src/
 
-  # flake8_qa:
-  #   name: Flake8 code quality assurance
-  #   runs-on: windows-latest
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
-  #     - name: Set up Python >=3.11.5 <=3.11.6
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: ">=3.11.5 <=3.11.6"
-  #     - name: Install dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install -r ./requirements.txt
-  #     - name: flake8 Lint
-  #       uses: py-actions/flake8@v2
-  #       with:
-  #         path: "src/"
-  #         ignore: "E226, E121, E123, E126, W504"
-  #         exclude: "src/tests/test_deepchecks.py"
-  #         max-line-length: "120"
+  flake8_qa:
+    name: Flake8 code quality assurance
+    runs-on: windows-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up Python >=3.11.5 <=3.11.6
+        uses: actions/setup-python@v4
+        with:
+          python-version: ">=3.11.5 <=3.11.6"
+      - name: Install Flake8
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+      - name: flake8 Lint
+        run: flake8 src\
