--- a/.github/workflows/staging_musicexpress-staging.yml
+++ b/.github/workflows/staging_musicexpress-staging.yml
@@ -46,7 +46,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'Staging'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -63,5 +63,14 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'musicexpress-staging'
-          slot-name: 'Production'
+          slot-name: 'Staging'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_46B6DB51CD354B21B91F6EF64EE4C959 }}
+
+      - name: 'Checkout'
+        uses: actions/checkout@v3
+
+      - name: 'Docker compose'
+        uses: isbang/compose-action@v1.5.1
+        with:
+          compose-file: "./compose.yml"
+          down-flags: "--volumes"
