fixed path to docker-compose file

--- a/.github/workflows/staging_musicexpress-staging.yml
+++ b/.github/workflows/staging_musicexpress-staging.yml
@@ -67,11 +67,8 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_46B6DB51CD354B21B91F6EF64EE4C959 }}
 
-      - name: 'Checkout'
-        uses: actions/checkout@v3
-
-      - name: 'Docker compose'
+      - name: 'Run Docker-Compose'
         uses: isbang/compose-action@v1.5.1
         with:
-          compose-file: "./compose.yml"
+          compose-file: "./compose.yaml"
           down-flags: "--volumes"
