--- a/.github/workflows/main_musicexpress.yml
+++ b/.github/workflows/main_musicexpress.yml
@@ -31,8 +31,7 @@ jobs:
       with:
         push: true
         tags: musicexpress.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_85d124765a2e4566bef9484990854434 }}/musicexpress:${{ github.sha }}
-        file: ./Dockerfile
-
+        file: ./docker/Dockerfile
   deploy:
     runs-on: ubuntu-latest
     needs: build
