--- a/.github/workflows/main_musicexpress.yml
+++ b/.github/workflows/main_musicexpress.yml
@@ -36,12 +36,12 @@ jobs:
       run: |
         dvc pull
 
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: musicexpress.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_85d124765a2e4566bef9484990854434 }}/musicexpress:${{ github.sha }}
-        file: ./docker/Dockerfile
+    - name: Build the Docker image
+      run: docker build -t musicexpress.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_85d124765a2e4566bef9484990854434 }}/musicexpress:${{ github.sha }} -f docker/Dockerfile . 
+    
+    - name: Push the Docker image to the Azure registry
+      run: docker push musicexpress.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_85d124765a2e4566bef9484990854434 }}/musicexpress:${{ github.sha }}
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
