--- a/.github/workflows/azure_deploy_staging.yml
+++ b/.github/workflows/azure_deploy_staging.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy container app to Azure Web App - musicexpress-staging
+name: Build and deploy container app to Azure Web App - stagingmusicexpress
 run-name: Staging - Deploy to Azure Web App
 
 on:
@@ -24,8 +24,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://stagingmusicexpress.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_cda7809aca8e40bdb768ccc04e35bccc }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_14b2a3a45e6649dfa6d11eb3756f338e }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_335f76853fb641fcbf64ad6606f5ef86 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_13abbae63b874d7a8729f6f3b48e2637 }}
 
     - name: Set up DVC
       uses: iterative/setup-dvc@v1
@@ -37,11 +37,11 @@ jobs:
         dvc pull
 
     - name: Build the Docker image
-      run: docker build -t stagingmusicexpress.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_cda7809aca8e40bdb768ccc04e35bccc }}/stagingmusicexpress:${{ github.sha }} -f docker/Dockerfile . 
+      run: docker build -t stagingmusicexpress.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_335f76853fb641fcbf64ad6606f5ef86 }}/stagingmusicexpress:${{ github.sha }} -f docker/Dockerfile . 
     
     - name: Push the Docker image to the Azure registry
-      run: docker push stagingmusicexpress.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_cda7809aca8e40bdb768ccc04e35bccc }}/stagingmusicexpress:${{ github.sha }}
-  
+      run: docker push stagingmusicexpress.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_335f76853fb641fcbf64ad6606f5ef86 }}/stagingmusicexpress:${{ github.sha }}
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -54,7 +54,7 @@ jobs:
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'musicexpress-staging'
+        app-name: 'stagingmusicexpress'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_ef92c92fb974418887d9c0a4dd7c5105 }}
-        images: 'stagingmusicexpress.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_cda7809aca8e40bdb768ccc04e35bccc }}/stagingmusicexpress:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_3ba59260b4544bf29ff3adbf2bb2e3a9 }}
+        images: 'stagingmusicexpress.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_335f76853fb641fcbf64ad6606f5ef86 }}/stagingmusicexpress:${{ github.sha }}'
