--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -20,10 +20,10 @@ jobs:
         with:
           python-version: ">=3.11.5 <=3.11.6"
 
-      - name: Install dependencies
+      - name: Install pylint
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./requirements.txt
+          pip install pylint
 
       - name: Analyze code with pylint
         run: |
