added deepchecks to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pylint==3.0.2
 flake8==6.1.0
 flake8-html==0.4.3
 great-expectations==0.18.1
+deepcheck==0.17.5
 
 # Libraries needed for API
 fastapi==0.104.1
