--- a/.github/workflows/azure_deploy_main.yml
+++ b/.github/workflows/azure_deploy_main.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy container app to Azure Web App - musicexpress
+name: Production - Deploy to Azure Web App
 run-name: Production - Deploy to Azure Web App
 
 on:
