--- a/requirements.txt
+++ b/requirements.txt
@@ -20,13 +20,21 @@ spotipy==2.23.0
 yellowbrick==1.5
 nbformat>=4.2.0
 
-# Libraries needed for Data Versioning, Model and Experiment Tracking
+# Libraries needed for Model and Experiment Tracking
 mlflow==2.7.1
 dagshub==0.3.8.post2
-dvc==3.27.0
-dvc-s3==2.23.0
-dvc_gdrive==2.20.0
 joblib==1.3.2
+
+# Libraries needed for Data Versioning (DVC)
+dvc==3.27.0
+dvc-data==2.18.2
+dvc-gdrive==2.20.0
+dvc-http==2.30.2
+dvc-objects== 1.1.0
+dvc-render==0.6.0
+dvc-s3==2.23.0
+dvc-studio-client==0.15.0
+dvc-task==0.3.0
 
 # Libraries needed for Quality-Assessment
 pytest==7.4.3
